# pyri-webui-browser

./: README.md  pyproject.toml  setup.py
src/pyri/webui_browser/: __init__.py  core_app_vue.py  golden_layout.py  js_loader.py  pyri_core_app.html  pyri_vue.py  util.py  vue.py  webui_browser_plugin_init.py
src/pyri/webui_browser/components/: devices_component.html  devices_component.py  globals_list_component.py  procedure_blockly_component.html  procedure_blockly_component.py  procedure_list_component.py  procedure_output_component.py  procedure_pyri_component.html  procedure_pyri_component.py  procedure_util.py  program_main_component.html  program_main_component.py  standard_components.py  terminal_output_component.html  terminal_output_component.py  welcome_component.html  welcome_component.py
src/pyri/webui_browser/panels/: devices_panel.html  devices_panel.py  globals_panel.html  jog_panel.html  jog_panel.py  output_panel.html  procedure_blockly_panel.html  procedure_pyri_panel.html  program_main_panel.html  program_panel.html  program_panel.py  standard_panels.py  welcome_panel.html  welcome_panel.py
src/pyri/webui_browser/plugins/: component.py  panel.py  plugin_init.py  variable_dialog.py
tools/: install_test_wheel.py
